[package]
name = "pulsar-network"
version = "0.4.8"
edition = "2018"
license = "MIT"
description = "Pulsar Network is a distributed hash table peer-to-peer messaging protocol for the Astreuos Blockchain written in Rust."
repository = "https://github.com/stelar-software/rust-pulsar-network"
readme = "README.md"

[dependencies]
fides = "2.0.0"
rand = "0.8.5"
astro-notation = "3.1.0"
opis = "3.0.1"