[package]
name = "pulsar-network"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Pulsar Network is a distributed hash table peer-to-peer communication protocol for the Astreuos Blockchain."
repository = "https://github.com/stelar-software/rust-pulsar-network"
readme = "README.md"

[dependencies]
astro-format = "0.5.0"
fides = "2.2.1"
rand = "0.8.5"
opis = "3.0.1"
